--- a/index.html
+++ b/index.html
@@ -151,44 +151,44 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/case1.jpg" alt="" /></a>
-						<h3>Case goods storage</h3>
+						<a href="#" class="image featured"><img src="images/24.png" alt="" /></a>
+						<!-- <h3>Case goods storage</h3> -->
 						<!-- <p>(do you want to add text here...?)</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/barrel1.jpg" alt="" /></a>
-						<h3>Barrel storage</h3>
+						<a href="#" class="image featured"><img src="images/25.png" alt="" /></a>
+						<!-- <h3>Barrel storage</h3> -->
 						<!-- <p>Ornare nulla proin odio consequat.</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/barn-door1.jpg" alt="" /></a>
-						<h3>Bonded wine storage</h3>
+						<a href="#" class="image featured"><img src="images/26.png" alt="" /></a>
+						<!-- <h3>Bonded wine storage</h3> -->
 						<!-- <p>Ornare nulla proin odio consequat.</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/barn-door3.jpg" alt="" /></a>
-						<h3>Club Shipping & Fulfillment</h3>
+						<a href="#" class="image featured"><img src="images/27.png" alt="" /></a>
+						<!-- <h3>Club Shipping & Fulfillment</h3> -->
 						<!-- <p><i>Coming soon!</i></p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/vineyard3.jpg" alt="" /></a>
-						<h3>Labeling</h3>
-						<p><i>Coming soon!</i></p>
+						<a href="#" class="image featured"><img src="images/28.png" alt="" /></a>
+						<!-- <h3>Labeling</h3> -->
+						<!-- <p><i>Coming soon!</i></p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/vineyard4.jpg" alt="" /></a>
-						<h3>Bottling</h3>
-						<p><i>Coming soon!</i></p>
+						<a href="#" class="image featured"><img src="images/29.png" alt="" /></a>
+						<!-- <h3>Bottling</h3> -->
+						<!-- <p><i>Coming soon!</i></p> -->
 					</article>
 				</div>
 			</div>
@@ -221,20 +221,20 @@
 						<p>I’m grateful to have entered this relationship with Paso Wine Storage. The functionality and customer service has been exceptional. Hannah and David are a joy to work with. Jim and I are super happy with our decision. Any job or inquiry I throw at Hannah is handled quickly and with a level of care that is truly notable and appreciated.<br><strong>–Adrienne Ferrara</strong><br><i style="color:darkgray;">Cal Poly Wine and Viticulture Department</i></p>
 					</section>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
+
+				<!-- <div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-comments"></span>
-						<!-- <a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a> -->
+						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
 						<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
 					</section>
 				</div>
+
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-comments"></span>
-						<!-- <a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a> -->
+						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
 						<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
 					</section>
-				</div>
+				</div> -->
 
 			</div>
 			<footer>
@@ -249,8 +249,8 @@
 		<div class="container medium">
 			<header>
 				<h2>Contact</h2>
-				<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 			</header>
+				<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 			<div class="row">
 				<div class="col-12">
 					<form method="post" action="https://formspree.io/f/mgedqydj">
@@ -317,7 +317,7 @@
 							<!-- Begin Mailchimp Signup Form -->
 							<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
 							<style type="text/css">
-								#mc_embed_signup{background:#303030; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px; color: white}
+								#mc_embed_signup{background:#E2BF8A; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px; color: white}
                             /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
                                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                            </style>
@@ -338,6 +338,7 @@
                            			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                            			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3c8e5ccf97222299ab145b9eb_20e22a6cdc" tabindex="-1" value=""></div>
                            			<div class="optionalParent">
+                           				<br>
                            				<div class="clear foot">
                            					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                            					<!--<p class="brandingLogo"><a href="http://eepurl.com/ipzinU" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>-->
