--- a/our-story.html
+++ b/our-story.html
@@ -97,8 +97,8 @@
 		<div class="container medium">
 			<header>
 				<h2>Contact</h2>
-				<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 			</header>
+				<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 			<div class="row">
 				<div class="col-12">
 					<form method="post" action="https://formspree.io/f/mgedqydj">
@@ -127,55 +127,45 @@
 								</div>
 							</form>
 						</div>
-						<!-- <div class="col-12">
+						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+							<!-- <h3>Find us on ...</h3> -->
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
+								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li> -->
+								<li><a href="https://www.instagram.com/pasowinestorage" class="icon brands fa-instagram" target="_blank"></a></li>
+								<!-- <li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
 								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
 								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
 								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
+								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li> -->
 							</ul>
-							<hr />
-						</div> -->
-
-
-
+						</div>
 					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
-						</ul>
-					</footer>
-				</div>
-			</article>
+				</article>
 
-			<!-- Subscribe -->
-			<article id="subscribe" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Subscribe</h2>
-						<p>Sign up for our email newsletter to stay updated about our products and services.</p>
-					</header>
+				<!-- Subscribe -->
+				<article id="subscribe" class="wrapper style4">
+					<div class="container medium">
+						<header>
+							<h2>Subscribe</h2>
+							<p>Sign up for our email newsletter to stay updated about our products and services.</p>
+						</header>
 
 
-					<center>
-						<!-- Begin Mailchimp Signup Form -->
-						<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-						<style type="text/css">
-							#mc_embed_signup{background:#303030; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px; color: white}
+						<center>
+							<!-- Begin Mailchimp Signup Form -->
+							<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+							<style type="text/css">
+								#mc_embed_signup{background:#E2BF8A; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px; color: white}
                             /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
                                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                            </style>
@@ -196,6 +186,7 @@
                            			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                            			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3c8e5ccf97222299ab145b9eb_20e22a6cdc" tabindex="-1" value=""></div>
                            			<div class="optionalParent">
+                           				<br>
                            				<div class="clear foot">
                            					<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                            					<!--<p class="brandingLogo"><a href="http://eepurl.com/ipzinU" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>-->
@@ -225,6 +216,13 @@
            <script src="assets/js/breakpoints.min.js"></script>
            <script src="assets/js/util.js"></script>
            <script src="assets/js/main.js"></script>
-           
+           <script type="text/javascript">
+
+           	jQuery( document ).ready(function() {
+           		jQuery( ".sign-in" ).click(function() { 
+           			jQuery( ".sign-in-wrapper" ).show();
+           		});
+           	});
+           </script>
        </body>
        </html>
