--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/25.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/30.png" alt="" /></a>
 						<!-- <h3>Barrel storage</h3> -->
 						<!-- <p>Ornare nulla proin odio consequat.</p> -->
 					</article>
@@ -170,27 +170,27 @@
 						<!-- <p><i>Coming soon!</i></p> -->
 					</article>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				<!-- <div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/24.png" alt="" /></a>
-						<!-- <h3>Case goods storage</h3> -->
-						<!-- <p>(do you want to add text here...?)</p> -->
+						<h3>Case goods storage</h3>
+						<p>(do you want to add text here...?)</p>
 					</article>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				</div> -->
+				<!-- <div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/28.png" alt="" /></a>
-						<!-- <h3>Labeling</h3> -->
-						<!-- <p><i>Coming soon!</i></p> -->
+						<h3>Labeling</h3>
+						<p><i>Coming soon!</i></p>
 					</article>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				</div> -->
+				<!-- <div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/29.png" alt="" /></a>
-						<!-- <h3>Bottling</h3> -->
-						<!-- <p><i>Coming soon!</i></p> -->
+						<h3>Bottling</h3>
+						<p><i>Coming soon!</i></p>
 					</article>
-				</div>
+				</div> -->
 			</div>
 			<footer>
 				<p>Let us take care of your wine storage needs.</p>
