--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-V9V60FRMHM"></script>
@@ -94,7 +94,7 @@
 		</form>
 	</div>
 </div>
-<div id="sign-in-link"><a class="sign-in" url="#top">Sign in</a> </div> 
+<div id="sign-in-link"><a class="sign-in" url="#top" role="button">Sign in</a> </div> 
 <!-- Nav -->
 <nav id="nav">
 	<ul class="container">
@@ -117,7 +117,7 @@
 		<header>
 			<h1>Wine storage & fulfillment with a personal touch</h1>
 		</header>
-		<p>Offering the best customer service for all your wine storage & fulfillment needs.</p>
+		<p role="heading">Offering the best customer service for all your wine storage & fulfillment needs.</p>
 		<a href="#contact" class="button large scrolly">Contact</a>
 
 
@@ -151,21 +151,21 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/30.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/30.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Barrel storage</h3> -->
 						<!-- <p>Ornare nulla proin odio consequat.</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/26.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/26.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Bonded wine storage</h3> -->
 						<!-- <p>Ornare nulla proin odio consequat.</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/27.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/27.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Club Shipping & Fulfillment</h3> -->
 						<!-- <p><i>Coming soon!</i></p> -->
 					</article>
@@ -193,13 +193,13 @@
 				</div> -->
 			</div>
 			<footer>
-				<p>Let us take care of your wine storage needs.</p>
+				<p role="heading">Let us take care of your wine storage needs.</p>
 				<!-- <a href="#contact" class="button large scrolly">Contact</a> -->
 			</footer>
 
 			<div class="shadow">
 				<center>
-					<img src="images/commerce.png" width=100%>
+					<img src="images/commerce.png" alt="image of facility" width=100%>
 				</center>
 			</div>
 
@@ -216,7 +216,7 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://www.ninerwine.com/" target="_blank" class="image featured"><img src="images/niner.png" alt="" /></a>
+						<a href="https://www.ninerwine.com/" target="_blank" class="image featured"><img src="images/niner.png" alt="niner testimonial" aria-label="testimonial"/></a>
 						<!-- <span class="icon featured fa-comments"></span> -->
 						<p>We are so thankful for our partnership with Paso Wine Storage! Hannah and her team consistently provide white-glove customer service, along with professional and timely communication. They bring us solutions instead of problems and take care of any shipping issues that arise, giving us more time to focus on our customers. They are a joy to work with and the level of care they take in their work is truly appreciated!<br><strong>–Alicia Wooten</strong><br><i style="color:darkgray;">Niner Wine Estates</i></p>
 					</section>
@@ -224,7 +224,7 @@
 
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
+						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="calpoly testimonial" aria-label="testimonial" /></a>
 						<!-- <span class="icon featured fa-comments"></span> -->
 						<p>I’m grateful to have entered this relationship with Paso Wine Storage. The functionality and customer service has been exceptional. Hannah and David are a joy to work with. Jim and I are super happy with our decision. Any job or inquiry I throw at Hannah is handled quickly and with a level of care that is truly notable and appreciated.<br><strong>–Adrienne Ferrara</strong><br><i style="color:darkgray;">Cal Poly Wine and Viticulture Department</i></p>
 					</section>
@@ -232,7 +232,7 @@
 
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://optiovineyards.com/" target="_blank" class="image featured"><img src="images/optio.png" alt="" /></a>
+						<a href="https://optiovineyards.com/" target="_blank" class="image featured"><img src="images/optio.png" alt="optio testimonial" aria-label="testimonial" /></a>
 						<!-- <span class="icon featured fa-comments"></span> -->
 						<p>I have to say the service, quality of packaging, timeliness, and responsiveness from Paso Robles Wine storage is absolutely fantastic. They are 100% customer first company. Hannah & David are amazing people to work with. You won't be nickeled and dimed for all the little shipping charges and extra things that you don't know are happening. Go ahead, make the switch, you'll be happy you did.<br><strong>–Melanie Greer </strong><br><i style="color:darkgray;">Optio Vineyards</i></p>
 					</section>
@@ -293,7 +293,7 @@
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li> -->
-								<li><a href="https://www.instagram.com/pasowinestorage" class="icon brands fa-instagram" target="_blank"></a></li>
+								<li><a href="https://www.instagram.com/pasowinestorage" class="icon brands fa-instagram" target="_blank" aria-label="instagram"></a></li>
 								<!-- <li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
@@ -332,7 +332,7 @@
                            				<label for="mce-EMAIL" style="color: white">Email Address
                            				</label>
                            				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
-                           				<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                           				<span id="mce-EMAIL-HELPERTEXT" class="helper_text" role="none"></span>
                            			</div>
                            			<div id="mce-responses" class="clear foot">
                            				<div class="response" id="mce-error-response" style="display:none"></div>
