--- a/index_team.html
+++ b/index_team.html
@@ -264,28 +264,28 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/team/placeholder.jpg" alt="image of services" role="button" /></a>
+						<a href="#" class="image featured"><img src="images/team/headshot.jpg" alt="image of services" role="button" /></a>
 						<h3>David</h3>
 						<p>President</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/team/placeholder.jpg" alt="image of services" role="button" /></a>
+						<a href="#" class="image featured"><img src="images/team/headshot.jpg" alt="image of services" role="button" /></a>
 						<h3>Hannah</h3>
 						<p>General Manager</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/team/placeholder.jpg" alt="image of services" role="button" /></a>
+						<a href="#" class="image featured"><img src="images/team/headshot.jpg" alt="image of services" role="button" /></a>
 						<h3>Oscar</h3>
 						<p>Office Manager</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/team/placeholder.jpg" alt="image of services" role="button" /></a>
+						<a href="#" class="image featured"><img src="images/team/headshot.jpg" alt="image of services" role="button" /></a>
 						<h3>Esme</h3>
 						<p>Warehouse cat</p>
 					</article>
