--- a/index_team.html
+++ b/index_team.html
@@ -280,7 +280,7 @@
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/team/headshot.jpg" alt="image of services" role="button" /></a>
 						<h3>Oscar</h3>
-						<p>Office Manager</p>
+						<p>Warehouse Manager</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
