add "our partners"

--- a/index.html
+++ b/index.html
@@ -206,6 +206,38 @@
 		</div>
 	</article>
 
+	<!-- Partners -->
+	<article id="partners" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>Our Partners</h2>
+				<p>Our systems integrate with popular services and carriers to provide seamless operations.</p>
+			</header>
+			<div class="logo-carousel-container">
+				<div class="logo-carousel">
+					<img src="images/partners/fedex.png" alt="FedEx Logo">
+					<img src="images/partners/ups.png" alt="UPS Logo">
+					<img src="images/partners/gls.png" alt="GLS Logo">
+					<img src="images/partners/commerce7.png" alt="Commerce7 Logo">
+					<img src="images/partners/shopify.png" alt="Shopify Logo">
+					<img src="images/partners/orderport.png" alt="Orderport Logo">
+					<img src="images/partners/shipcompliant.png" alt="Ship Compliant Logo">
+					<img src="images/partners/vinoshipper.png" alt="Vinoshipper Logo">
+					<img src="images/partners/corksy.png" alt="Corksy Logo">
+					<img src="images/partners/fedex.png" alt="FedEx Logo">
+					<img src="images/partners/ups.png" alt="UPS Logo">
+					<img src="images/partners/gls.png" alt="GLS Logo">
+					<img src="images/partners/commerce7.png" alt="Commerce7 Logo">
+					<img src="images/partners/shopify.png" alt="Shopify Logo">
+					<img src="images/partners/orderport.png" alt="Orderport Logo">
+					<img src="images/partners/shipcompliant.png" alt="Ship Compliant Logo">
+					<img src="images/partners/vinoshipper.png" alt="Vinoshipper Logo">
+					<img src="images/partners/corksy.png" alt="Corksy Logo">
+				</div>
+			</div>
+		</div>
+	</article>
+
 	<!-- Testimonials -->
 	<article id="work" class="wrapper style2">
 		<div class="container">
@@ -278,7 +310,7 @@
 							</div>
 							<div class="col-6 col-12-small">
 								<input type="text" name="email" id="email" placeholder="Email" />
-							</div>
+							</div> 
 							<div class="col-6 col-12-small">
 								<input type="text" name="phone" id="phone" placeholder="Phone" />
 							</div>
