add pics to our story

--- a/our-story.html
+++ b/our-story.html
@@ -70,18 +70,26 @@
 			</header>
 			<!-- <img class="left" src="images/commerce.png"> -->
 
+			<img class="right" src="images/fam/fam1.png">
+
 			<p align="justify">Like many small businesses, Paso Wine Storage has its origin in family. The founder and owner, David Kudija, first met his wife, Karen, when they were both living in Southern California. David was running the manufacturing business he had taken over from his father, and Karen was preparing to enter optometry school. They knew that upon graduation Karen could practice optometry in any city she wanted, and that–as long as he had UPS delivery and a phone line–David could operate his manufacturing business from wherever he wanted. This exceptional opportunity allowed them to focus on what was most important: where to raise their future family. So, following their June wedding in 1986, Karen and David took a road trip across California, from the Mexican border, to Hearst Castle, to the Central Valley, looking for a place to put down roots. This quest eventually led them to the beautiful rolling hills and vineyards of Paso Robles, where they decided to settle down.</p>
 
 			<p align="justify">And so, in 1990 the big move up to Paso Robles began. Karen started her optometry practice with an office on Vine Street, and David set up his manufacturing business in town, part of which involved buying a warehouse on Commerce Way, with the thought of eventually expanding the manufacturing business there. 3 children and 32 years later, after his decades working in manufacturing and seeing all his kids through college, David’s enterprising spirit was looking for something new. So, he turned his attention to the warehouse he had bought when first moving to the area. Though never part of his manufacturing business, the building had served many community businesses over the years, housing operations such as Paris Precision for sheet metal manufacturing, Paso Wine Services for custom crush, Weatherby for rifle manufacturing, and Daniel’s Woodland for personal protection equipment production during Covid. Thinking to honor the rich history of wine production in the area and provide a service to local wineries, David converted the building into wine storage, thus establishing Paso Wine Storage.</p>
+			
+			<img class="left" src="images/fam/fam2.jpg">
 
 			<p align="justify">On April 7, 2022 Paso Wine Storage received its license to store wine in its air conditioned 35,000 square foot warehouse. As the storage business grew Paso Wine Storage branched out to include fulfillment of daily orders and club shipments for wineries. The community has been so supportive of the effort that Paso Wine Storage recently leased the building next door to add an additional 40,000 square feet of wine storage.</p>
-			
-			<img class="right" src="images/commerce.png">
 
 			<p align="justify">As it has been from its conception, Paso Wine Storage is a family affair. It is a 3-generation family business in the making: David runs the show, the kids help with marketing and finance, and the grandkids have started pulling weeds and taking forklift operator lessons. Thank you for your support and we are ready to offer you our personal service!</p>
 
+			<br><br><br>
+
 			<a href="index.html#services" class="button large scrolly">Our Services</a>
 			<a href="index.html" class="button large alt">Home</a>
+
+			<br><br><br>
+
+			<img src="images/fam/fam5.jpg" class="banner-image">
 
 
 
