add bond, product descriptions

--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/30.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Barrel storage</h3> -->
-						<!-- <p>Ornare nulla proin odio consequat.</p> -->
+						<p>We store your case goods and barres in our temperature controlled facility. Pricing is available at any amount.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/26.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Bonded wine storage</h3> -->
-						<!-- <p>Ornare nulla proin odio consequat.</p> -->
+						<p>Our facility is fully bonded: we can store your non-tax paid goods.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/27.png" alt="image of services" role="button" /></a>
 						<!-- <h3>Club Shipping & Fulfillment</h3> -->
-						<!-- <p><i>Coming soon!</i></p> -->
+						<p>Let our team handle your DTC or wholesale fulfillment from our warehouse, from boutique to large scale.</p>
 					</article>
 				</div>
 				<!-- <div class="col-4 col-6-medium col-12-small">
@@ -405,7 +405,7 @@
                    </div>
                    <footer>
                    	<ul id="copyright">
-                   		<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
+                   		<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li><li>Bond Number: BWN-CA-21126</li>
                    	</ul>
                    </footer>
                </div>
