--- a/our-story.html
+++ b/our-story.html
@@ -211,7 +211,7 @@
                    </div>
                    <footer>
                    	<ul id="copyright">
-                   		<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
+                   		<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li><li>Bond Number: BWN-CA-21126</li>
                    	</ul>
                    </footer>
                </div>
